# IPC_Crossplatform

./: .gitignore  CMakeLists.txt  environmentVariablesExample.cpp  environment_vars_example.cpp  kill_example.cpp  main.cpp  pipe_example1.cpp  pipe_example2.cpp  redirection_example.cpp  shared_memory_reader_example.cpp  shared_memory_writer_example.cpp
Test/In/: kill_in.txt  pipe_in.txt  redirection_in.txt
includes/: MyHandler.h  MyProcess.h  MyProcessEnvironment.h  MySharedMemory.h
samples/: child.cpp  pipe_child.cpp  pipe_child2.cpp
src/: MyHandler.cpp  MyProcess.cpp  MyProcessEnvironment.cpp  MySharedMemory.cpp  main.cpp
